--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Seminar - DL for Sciences
+description: Seminar - Deep Learning for Sciences
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
-
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+url: https://xxjsw.github.io/blogpost
+search_enabled: false
