--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ theme: just-the-docs
 
 url: https://xxjsw.github.io/blogpost
 search_enabled: false
-
+compress_html:
+…
+  blanklines: false
 # LaTeX rendering via "katex" (KaTeX, default) or "mathjax" (MathJax) or "none" / "off" (NO rendering)
 latex: katex
