--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,16 @@ theme: just-the-docs
 
 url: https://xxjsw.github.io/blogpost
 search_enabled: false
+
+compress_html:
+  clippings: all
+  comments: all
+  endings: all
+  startings: []
+  blanklines: true # required for Mathjax
+  profile: false
+
+# For the Mathjax script loaded in the head of all pages with page.mathjax
+mathjax:
+  source: https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_CHTML
+  config: 'MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "AMS" } } })'
